overlays/local/ddb-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: localstack
  name: ddb-ui
spec:
  selector:
    matchLabels:
      app: ddb-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: ddb-ui
    spec:
      containers:
      - name: ddb-ui
        image: aaronshaf/dynamodb-admin:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 100m
            memory: 1024Mi
        ports:
          - name: http
            containerPort: 8001
