overlays/local/ddb-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddb-ui-service
  namespace: localstack
spec:
  selector:
    app: ddb-ui
  ports:
    - protocol: TCP
      port: 8001
      targetPort: http
