overlays/local/ddb-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guis-ingress
  namespace: localstack
spec:
  ingressClassName: nginx
  rules:
  - host: ddb.local
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: ddb-ui-service
              port:
                number: 8001
